--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-torch==2.1.0
 transformers
 datasets
 evaluate
@@ -8,8 +7,8 @@ tensorboard
 safetensors
 huggingface_hub==0.20.3
 sentencepiece
-lightning==2.2.0
-torchmetrics==1.2.1
+lightning
+torchmetrics
 einops
 pydantic==2.6.3
 tabulate==0.9.0
