--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,9 @@ dependencies = [
     "datacommons",
     "datacommons-pandas>=0.0.3",
     "ipykernel>=6.29.5",
-    "transformers==4.45.2",
+    "transformers==4.46.2",
     "torch>=2.4.1",
+    "trl==0.8.2.dev0",
     "rich>=13.9.2",
     "polars>=1.12.0",
     "wrapt-timeout-decorator>=1.5.1",
