--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,12 @@ dependencies = [
     "datacommons-pandas>=0.0.3",
     "ipykernel>=6.29.5",
     "transformers==4.46.2",
-    "torch>=2.4.1",
-    "trl==0.8.2.dev0",
     "rich>=13.9.2",
     "polars>=1.12.0",
     "wrapt-timeout-decorator>=1.5.1",
+    "trl>=0.12.0",
+    "lightning>=2.4.0",
+    "ninja>=1.11.1.1",
+    "packaging>=24.1",
+    "bitsandbytes>=0.44.1",
 ]
