--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "torch==2.5.1+cu121",
     "torchaudio==2.5.1+cu121",
     "torchvision==0.20.1+cu121",
+    "flash-attn>=2.7.0.post2",
 ]
 
 
@@ -56,3 +57,6 @@ name = "pytorch-cu121"
 url = "https://download.pytorch.org/whl/cu121"
 explicit = true
 
+
+[build-system]
+requires = ["ninja", "packaging"]
