--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,22 +30,25 @@ dependencies = [
     "datacommons",
     "datacommons-pandas>=0.0.3",
     "ipykernel>=6.29.5",
-    "transformers==4.46.2",
     "rich>=13.9.2",
     "polars>=1.12.0",
     "wrapt-timeout-decorator>=1.5.1",
-    "trl>=0.12.0",
     "lightning>=2.4.0",
     "ninja>=1.11.1.1",
     "packaging>=24.1",
-    "bitsandbytes>=0.44.1",
-    "peft>=0.13.2",
+]
+
+[project.optional-dependencies]
+torch_deps = [
+    "transformers==4.46.2",
     "torch==2.5.1+cu121",
     "torchaudio==2.5.1+cu121",
     "torchvision==0.20.1+cu121",
     "flash-attn>=2.7.0.post2",
+    "bitsandbytes>=0.44.1",
+    "peft>=0.13.2",
+    "trl>=0.12.0",
 ]
-
 
 [tool.uv.sources]
 torch = { index = "pytorch-cu121" }
