--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,13 +45,17 @@ dependencies = [
     "torch==2.5.1",
     "torchaudio==2.5.1",
     "torchvision==0.20.1",
-    "flash-attn>=2.7.0.post2; sys_platform == 'linux'",
-    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
     "peft>=0.13.2",
     "trl>=0.12.0",
     "sentencepiece",
     "einops",
     # add vllm if needed for evals
+]
+
+[project.optional-dependencies]
+flash-attn = [
+    "flash-attn>=2.7.0.post2; sys_platform == 'linux'",
+    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
 ]
 
 [tool.uv.sources]
