--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ dependencies = [
     "bitsandbytes>=0.44.1; sys_platform == 'linux'",
     "mistune>=3.1.0",
     "ruff>=0.8.1",
+    "chardet>=5.2.0",
 ]
 
 [tool.uv.sources]
