--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,6 @@ dependencies = [
     "rich>=13.9.2",
     "polars>=1.12.0",
     "wrapt-timeout-decorator>=1.5.1",
-    "lightning>=2.4.0",
     "ninja>=1.11.1.1",
     "packaging>=24.1",
     "fastapi>=0.115.5",
@@ -55,6 +54,7 @@ dependencies = [
     "mistune>=3.1.0",
     "ruff>=0.8.1",
     "chardet>=5.2.0",
+    "lightning>=2.5.0.post0",
 ]
 
 [tool.uv.sources]
